# mysign.id

./: README.md  package.json  pnpm-lock.yaml  vercel.json
.changeset/: config.json
contracts/: Cargo.toml  package.json
contracts/deployments/greeter/: greeter.contract  greeter.json  greeter.wasm
contracts/src/greeter/: Cargo.toml
contracts/src/mysign/: Cargo.toml  lib.rs
frontend/: components.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(marketing)/: layout.tsx  page.tsx
frontend/src/app/(marketing)/verify/: page.tsx
frontend/src/app/components/: compare-slider.tsx  home-page-title.tsx
frontend/src/app/verify/: page.tsx
frontend/src/components/layout/: main-nav.tsx  mobile-nav.tsx  mode-toggle.tsx  navbar.tsx  site-footer.tsx
frontend/src/components/shared/: icons.tsx
frontend/src/components/ui/: background-gradient.tsx  card.tsx  crypto-card.tsx  dropdown-menu.tsx  form.tsx  input.tsx  tooltip.tsx
frontend/src/components/web3/: connect-button.tsx
frontend/src/config/: marketing.ts  site.ts
frontend/src/deployments/: deployments.ts
frontend/src/lib/: utils.ts
frontend/src/types/: index.d.ts
